Bug 480173 - Shortcut to activate System Tray applets don't work until the System Tray popup is opened once
Summary: Shortcut to activate System Tray applets don't work until the System Tray pop...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.27.9
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 488332 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-22 15:42 UTC by popov895
Modified: 2024-06-27 14:28 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
"System Tray Settings" dialog (141.59 KB, image/png)
2024-05-28 09:57 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2024-01-22 15:42:52 UTC
SUMMARY

The keyboard shortcut to activate the Clipboard applet doesn't always work. Both Plasma 5 and Plasma 6 are affected.

STEPS TO REPRODUCE

1. Set shortcut to activate the Clipboard applet
2. Clear history in the Clipboard applet
3. Log out and log in
4. Press the shortcut set in step 1

OBSERVED RESULT

The Clipboard applet is still closed.

EXPECTED RESULT

The Clipboard applet is open.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20240119
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.114.0
Qt Version: 5.15.12
Graphics Platform: X11
Comment 1 popov895 2024-01-22 15:50:48 UTC
I'd like to note that the keyboard shortcut to activate the Clipboard applet always works if:
- the icon of the Clipboard applet is visible (the Clipboard applet is not empty or the visibility of the icon is set to "Always Show")
- you previously opened any applet (except the Calendar applet)
Comment 2 popov895 2024-01-22 21:52:30 UTC
This issue affects all applets except Notification.
Comment 4 popov895 2024-01-23 23:19:50 UTC
(In reply to popov895 from comment #3)
> Here's the culprit
> https://invent.kde.org/plasma/plasma-workspace/-/commit/
> 04112536133184eeb53af6016e9aeddf9db546d4#ada3ac936b40dc2dd21eb895ced1c0d4f457
> 2c9e_67_70

Sorry, that was an erroneous conclusion. Found the real cause of the issue, will create a MR later.
Comment 5 popov895 2024-01-24 21:02:13 UTC
Hmm, my solution works fine everywhere except Plasma 6 + Wayland + floating mode. Are there any specifics to how the panel works on Plasma 6 + Wayland in floating mode?
Comment 6 Bug Janitor Service 2024-01-26 16:50:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3832
Comment 7 popov895 2024-05-10 08:34:31 UTC
Still can reproduce.

Operating System: openSUSE Tumbleweed 20240509
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Graphics Platform: X11
Comment 8 fanzhuyifan 2024-05-27 18:20:46 UTC
Resetting to CONFIRMED since the MR was closed.
Comment 9 David Edmundson 2024-05-28 09:14:55 UTC
Can you confirm how you're setting a keyboard shortcut to activate the applet
Comment 10 popov895 2024-05-28 09:57:17 UTC
Created attachment 169904 [details]
"System Tray Settings" dialog

As far as I know, there's only one way to do this: from the "System Tray Settings" dialog (right click on the system tray > "Configure System Tray...").
Comment 11 Bug Janitor Service 2024-06-12 03:46:46 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 12 Nate Graham 2024-06-12 16:21:10 UTC
*** Bug 488332 has been marked as a duplicate of this bug. ***
Comment 13 Marco Martin 2024-06-17 11:35:44 UTC
Git commit 009136c8c4f02d19f1a1ba40b28c5d8960235487 by Marco Martin.
Committed on 17/06/2024 at 11:35.
Pushed by mart into branch 'master'.

applets/systemtray: Fix shortcut activation for hidden applets

* move the expanded forwarding to the main item
* ensure the applet is properly loaded with extra api

Depends on https://invent.kde.org/plasma/libplasma/-/merge_requests/1145
FIXED-IN: 6.1.1

M  +0    -1    applets/systemtray/package/contents/ui/items/PlasmoidItem.qml
M  +22   -0    applets/systemtray/package/contents/ui/main.qml
M  +4    -0    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/009136c8c4f02d19f1a1ba40b28c5d8960235487
Comment 14 Marco Martin 2024-06-17 12:06:03 UTC
Git commit 63e572e923a4684edb7e90c5ea7eb02d967b39fb by Marco Martin.
Committed on 17/06/2024 at 11:38.
Pushed by mart into branch 'Plasma/6.1'.

applets/systemtray: Fix shortcut activation for hidden applets

* move the expanded forwarding to the main item
* ensure the applet is properly loaded with extra api

Depends on https://invent.kde.org/plasma/libplasma/-/merge_requests/1145
FIXED-IN: 6.1.1


(cherry picked from commit 009136c8c4f02d19f1a1ba40b28c5d8960235487)

195114c6 Shortcut activation for hidden applets
7eb2c7df move outside also the active model
1f212bd7 make it build
c652f94c Use a single instantiator

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +0    -1    applets/systemtray/package/contents/ui/items/PlasmoidItem.qml
M  +22   -0    applets/systemtray/package/contents/ui/main.qml
M  +4    -0    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/63e572e923a4684edb7e90c5ea7eb02d967b39fb
Comment 15 Nate Graham 2024-06-17 14:02:00 UTC
The commit that fixed got reverted because it caused Bug 488619; re-opening.
Comment 16 Bug Janitor Service 2024-06-17 14:02:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4464
Comment 17 Marco Martin 2024-06-27 07:50:36 UTC
Git commit 9c872a54287a1ea84326a71001386e4040b7c5a4 by Marco Martin.
Committed on 27/06/2024 at 07:50.
Pushed by mart into branch 'master'.

applets/systemtray: Fix shortcut activation for hidden applets

The systray applet was opened by a connection to activated in the
PlasmoidItem container element. This element is a delegate, of a Repeater
for active applets, and for the internal GridView in the popup for the passive applets.

Being a Delegate we can't be guaranteed it will be instantiated at startup,
in particular it won't be unless the first time the gridview is visible,
so the connections to the activated signal won't work until the first time the
applet is open. Also, if there would ever be enough icons in the popup to
cause a scrollbar, it will destroy the PopupItems out of view.

Move the connection to the activate signal that will cause the popup to open
inside an Instantiator in the main qml file: with an Instantiator we will always
be guaranteed every delegate (which is just a Connections)
will always be instantiated all the time

Depends on https://invent.kde.org/plasma/libplasma/-/merge_requests/1145
Related: bug 488619
FIXED-IN: 6.2

M  +1    -8    applets/systemtray/package/contents/ui/HiddenItemsView.qml
M  +0    -1    applets/systemtray/package/contents/ui/items/PlasmoidItem.qml
M  +59   -8    applets/systemtray/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/9c872a54287a1ea84326a71001386e4040b7c5a4