applets/systemtray: Fix shortcut activation for hidden applets

* move the expanded forwarding to the main item
* ensure the applet is properly loaded with extra api

Depends on https://invent.kde.org/plasma/libplasma/-/merge_requests/1145

BUG: 480173
FIXED-IN: 6.1.1